Creación de formulario y mecánica de registro

--- a/web_pf/app/templates/index.html
+++ b/web_pf/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-        <h1>¡Bienvenido, {{ user.username }}!</h1>
+        <h1>¡Bienvenido/a, {{ current_user.username }}!</h1>
         {% for post in posts %}
         <div><p><i>{{ post.author.username }} dice:</i> <b>{{ post.body }}</b></p></div>
         {% endfor %}
