--- a/web_pf/app/templates/base.html
+++ b/web_pf/app/templates/base.html
@@ -4,7 +4,7 @@
         {% if title %}
         <title>{{ title }} - Proyecto final de python</title>
         {% else %}
-        <title>Bienvenido a mi proyecto final de python con Deusto</title>
+        <title>Bienvenido/a a mi proyecto final de python con Deusto</title>
         {% endif %}
     </head>
     <body>
