Parte de análisis terminada

--- a/proyecto-triple/app/analisis/templates/analisis/bar.html
+++ b/proyecto-triple/app/analisis/templates/analisis/bar.html
@@ -1,29 +1,25 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <title>Gráfica de Barras - Análisis</title>
-</head>
-<body>
-    <header>
-        <h1>Gráfica de Barras</h1>
-        <nav>
-            <a href="{{ url_for('analisis.index') }}">Inicio Análisis</a>
-            <a href="{{ url_for('agenda.index') }}">Agenda</a>
-            <a href="{{ url_for('usuarios.index') }}">Usuarios</a>
-        </nav>
-    </header>
-    <main>
-        <h2>Datos de Análisis</h2>
-        <div>
-            <!-- Aquí se incluirá la gráfica de barras generada en el backend -->
-            <img src="{{ url_for('analisis.get_bar_chart') }}" alt="Gráfica de Barras">
-        </div>
-    </main>
-    <footer>
-        <p>&copy;  2025 Darío Zoreda</p>
-    </footer>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+        <h2>Seleccione los datos a mostrar</h2>
+        <form method="POST" action="{{ url_for('analisis.bar') }}">
+            <label for="data_type">Tipo de datos:</label>
+            <select name="data_type" id="data_type">
+                <option value="num_def">Defunciones</option>
+                <option value="new_cases">Casos</option>
+                <option value="num_hosp">Hospitalizados</option>
+                <option value="num_uci">UCI</option>
+            </select>
+            <button type="submit" name="top10">
+                Mostrar TOP 10
+            </button>
+            <button type="submit">Mostrar todos</button>
+        </form>
+
+        {% if chart_data %}
+            <h2>{{ chart_title }}</h2>
+            <div>
+                <img src="{{ chart_data }}" alt="Gráfica de distribución por provincia y día de la semana">
+            </div>
+        {% endif %}
+{% endblock %}
