--- a/proyecto-triple/app/templates/inicio.html
+++ b/proyecto-triple/app/templates/inicio.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
     <h1 id="proyecto-final-del-curso-de-python-con-deusto">Proyecto final del curso de python con Deusto</h1>
-            <p>Se me propusieron 3 opciones sencillas, pero he decidido hacer una mezcla de las 3, ya que será más interesante. Sobre todo, teniendo en cuenta que yo apenas he trabajado con Flask, y aquí se me pide.</p>
-        <div class="bloque_contenido" id="estructura">
+            <p>Se me propusieron 3 opciones sencillas, pero he decidido hacer una mezcla de las 3, ya que será más interesante.</p>
+        <div class="bloque_contenido">
         <h2 id="building_construction-estructura-del-proyecto">🏗️ Estructura del proyecto</h2>
         App en Flask para contener y mostrar el proyecto:
             <ul>
@@ -21,7 +21,6 @@
                 <p>Será una página en Flask con los siguientes atributos:</p>
                     <ul>
                     <li>Mensaje de bienvenida al proyecto</li>
-                    <li>Fondo de la página: un paisaje natural o un amanecer</li>
                     <li>Explicación de mi decisión</li>
                     <li>Enlaces a los 3 proyectos</li>
                     </ul>
