--- a/proyecto-triple/app/static/css/styles.css
+++ b/proyecto-triple/app/static/css/styles.css
@@ -72,6 +72,7 @@ nav {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  padding-bottom: 5px;
 }
 
 nav a {
@@ -179,4 +180,20 @@ footer {
   outline: 3px solid #ffe4e6;
   outline-offset: 2px;
   border-radius: 6px;
+}
+
+table {
+    border-collapse: separate;
+    border-spacing: 0;
+    overflow: hidden;
+    background-color: teal;
+    width: 100%;
+    margin: 0 auto;
+}
+
+th, td {
+    padding: 10px;
+    text-align: center;
+    border: 1px solid #000;
+    background-color: teal;
 }
