--- a/proyecto-triple/app/templates/agenda/agenda.html
+++ b/proyecto-triple/app/templates/agenda/agenda.html
@@ -1,28 +1,11 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agenda</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-</head>
-<body>
-    <header>
-        <h1>Gestor de Contactos</h1>
-        <nav>
-            <ul>
-                <li><a href="{{ url_for('agenda.create') }}">Crear Contacto</a></li>
-                <li><a href="{{ url_for('agenda.list') }}">Ver Contactos</a></li>
-                <li><a href="{{ url_for('index') }}">Volver a la Página de Bienvenida</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h2>Bienvenido al Gestor de Contactos</h2>
-        <p>Aquí puedes gestionar tus contactos de manera sencilla.</p>
-    </main>
-    <footer>
-        <p>&copy;  2025 Darío Zoreda</p>
-    </footer>
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+    <h2>Bienvenido al Gestor de Contactos</h2>
+    <p>Aquí puedes gestionar tus contactos de manera sencilla y privada.</p>
+    <nav>
+        <a href="{{ url_for('agenda.crear') }}">Nuevo contacto</a>
+        <a href="{{ url_for('agenda.lista_contactos') }}">Ver lista de contactos</a>
+        <a href="{{ url_for('agenda.buscar') }}">Buscar contacto</a>
+    </nav>
+
+{% endblock %}
