--- a/proyecto-triple/app/templates/agenda/editar.html
+++ b/proyecto-triple/app/templates/agenda/editar.html
@@ -1,27 +1,42 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar Contacto</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-</head>
-<body>
-    <div class="container">
-        <h1>Editar Contacto</h1>
-        <form method="POST" action="{{ url_for('agenda.update_contact', contact_id=contact.id) }}">
-            <label for="name">Nombre:</label>
-            <input type="text" id="name" name="name" value="{{ contact.name }}" required>
+{% extends "base.html" %}
 
-            <label for="phone">Número de Teléfono:</label>
-            <input type="text" id="phone" name="phone" value="{{ contact.phone }}" required pattern="\d{9}">
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" value="{{ contact.email }}" required>
-
-            <button type="submit">Actualizar Contacto</button>
-        </form>
-        <a href="{{ url_for('agenda.index') }}">Volver a la lista de contactos</a>
-    </div>
-</body>
-</html>
+{% block content %}
+<div class="bloque_contenido">
+    <h1>Editar usuario</h1>
+    <form action="" method="post" novalidate>
+        {{ form.hidden_tag() }}
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+            <div class="alert alert-{{ category }}">
+                {{ message }}
+            </div>
+            {% endfor %}
+        {% endif %}
+        {% endwith %}   
+        <p>
+            {{ form.email.label }}<br>
+            {{ form.email(size=32) }}
+            {% for error in form.email.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.nombre.label }}<br>
+            {{ form.nombre(size=32) }}
+            {% for error in form.nombre.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.telefono.label }}<br>
+            {{ form.telefono(size=32) }}
+            {% for error in form.telefono.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>{{ form.submit }}</p>
+    </form>
+    <a href="{{ url_for('agenda.lista_contactos') }}">↩️ Volver a la agenda</a>
+</div>
+{% endblock %}
